--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 RUN rm -rf /usr/share/nginx/html/index.html
 RUN rm -rf /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY code /usr/share/nginx/html
+COPY code /usr/share/nginx/html/
